--- a/packages/keyring/package.json
+++ b/packages/keyring/package.json
@@ -17,12 +17,12 @@
     "node": ">=14.15.0"
   },
   "dependencies": {
-    "@enkryptcom/signer-bitcoin": "^0.0.2",
-    "@enkryptcom/signer-ethereum": "^0.0.3",
-    "@enkryptcom/signer-polkadot": "^0.0.2",
-    "@enkryptcom/storage": "^0.0.2",
-    "@enkryptcom/types": "^0.0.1",
-    "@enkryptcom/utils": "^0.0.3",
+    "@enkryptcom/signer-bitcoin": "workspace:^",
+    "@enkryptcom/signer-ethereum": "workspace:^",
+    "@enkryptcom/signer-polkadot": "workspace:^",
+    "@enkryptcom/storage": "workspace:^",
+    "@enkryptcom/types": "workspace:^",
+    "@enkryptcom/utils": "workspace:^",
     "@polkadot/util": "^10.4.2",
     "assert": "^2.0.0",
     "bip39": "^3.1.0"
