--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "enkrypt",
   "packageManager": "yarn@3.2.2",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "workspaces": [
     "packages/signers/*",
@@ -25,7 +25,7 @@
     "watch-ts": "nodemon --exec 'yarn run build:all && node scripts/compile-done.js'",
     "upgrade": "yarn upgrade-interactive",
     "version:bump:patch": "yarn workspaces foreach -pv --exclude @enkryptcom/extension exec 'yarn version --immediate patch'",
-    "publish": "yarn workspaces foreach -pv --exclude @enkryptcom/extension exec 'yarn npm publish --access public --otp'",
+    "publish": "yarn workspaces foreach -pv --exclude @enkryptcom/extension exec 'yarn npm publish --access public --otp 474911'",
     "version:apply": "yarn version apply --all"
   },
   "devDependencies": {
