--- a/packages/name-resolution/package.json
+++ b/packages/name-resolution/package.json
@@ -46,6 +46,7 @@
   "license": "MIT",
   "dependencies": {
     "@ensdomains/address-encoder": "^0.2.21",
+    "@siddomains/sidjs": "^0.1.22",
     "@unstoppabledomains/resolution": "^8.5.0",
     "ethers": "^5.7.2"
   }
