--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -18,7 +18,7 @@
     "watch-vue-firefox": "cross-env BROWSER='firefox' vue-cli-service build --watch --no-clean"
   },
   "dependencies": {
-    "@acala-network/api": "^4.1.8-2.3",
+    "@babel/runtime": "^7.22.5",
     "@enkryptcom/extension-bridge": "workspace:^",
     "@enkryptcom/hw-wallets": "workspace:^",
     "@enkryptcom/keyring": "workspace:^",
@@ -27,8 +27,8 @@
     "@enkryptcom/swap": "workspace:^",
     "@enkryptcom/types": "workspace:^",
     "@enkryptcom/utils": "workspace:^",
-    "@ethereumjs/common": "^3.1.2",
-    "@ethereumjs/tx": "^4.1.2",
+    "@ethereumjs/common": "^3.2.0",
+    "@ethereumjs/tx": "^4.2.0",
     "@ledgerhq/hw-transport-webusb": "^6.27.15",
     "@metamask/eth-sig-util": "^5.1.0",
     "@types/chrome": "^0.0.237",
@@ -54,7 +54,7 @@
     "memoize-one": "^6.0.0",
     "moment": "^2.29.4",
     "nanoevents": "^7.0.1",
-    "pinia": "^2.1.3",
+    "pinia": "^2.1.4",
     "qrcode.vue": "^3.4.0",
     "switch-ts": "^1.1.1",
     "url-parse": "^1.5.10",
@@ -62,22 +62,23 @@
     "vue": "^3.3.4",
     "vue-echarts": "^6.6.0",
     "vue-router": "4.2.2",
-    "vue3-lottie": "^2.7.0",
+    "vue3-lottie": "^2.7.1",
     "vuedraggable": "^4.1.0",
     "web3-eth": "^1.10.0",
     "web3-utils": "^1.10.0",
+    "yarn": "^1.22.19",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@polkadot/api": "^9.14.2",
-    "@polkadot/extension-inject": "^0.44.9",
-    "@polkadot/keyring": "^10.4.2",
-    "@polkadot/rpc-provider": "^9.14.2",
-    "@polkadot/types": "^9.14.2",
-    "@polkadot/types-known": "^9.14.2",
-    "@polkadot/ui-shared": "^2.12.1",
-    "@polkadot/util": "^10.4.2",
-    "@polkadot/wasm-crypto": "^6.4.1",
+    "@polkadot/api": "^10.9.1",
+    "@polkadot/extension-inject": "^0.46.5",
+    "@polkadot/keyring": "^12.3.2",
+    "@polkadot/rpc-provider": "^10.9.1",
+    "@polkadot/types": "^10.9.1",
+    "@polkadot/types-known": "^10.9.1",
+    "@polkadot/ui-shared": "^3.5.1",
+    "@polkadot/util": "^12.3.2",
+    "@polkadot/wasm-crypto": "^7.2.1",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-json": "^4.1.0",
@@ -89,8 +90,8 @@
     "@types/uuid": "^9.0.2",
     "@types/wif": "^2.0.2",
     "@types/zxcvbn": "^4.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-plugin-typescript": "~5.0.8",
@@ -99,7 +100,7 @@
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.7.1",
@@ -114,7 +115,7 @@
     "rollup-plugin-uglify": "^6.0.4",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "systeminformation": "^5.18.3",
+    "systeminformation": "^5.18.4",
     "ts-mocha": "^10.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.5",
