--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -24,6 +24,7 @@
     "json-rpc-2.0": "^1.5.1",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.9",
+    "rango-sdk-basic": "^0.1.29",
     "reconnecting-websocket": "^4.4.0",
     "uuid": "^9.0.0",
     "web3-eth": "^1.9.0",
