--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -23,8 +23,8 @@
     "isomorphic-ws": "^5.0.0",
     "json-rpc-2.0": "^1.6.0",
     "lodash": "^4.17.21",
-    "rango-sdk-basic": "^0.1.29",
     "node-fetch": "^2.6.11",
+    "rango-sdk-basic": "0.1.35",
     "reconnecting-websocket": "^4.4.0",
     "uuid": "^9.0.0",
     "web3-eth": "^1.10.0",
