devop: update packages

--- a/packages/signers/bitcoin/package.json
+++ b/packages/signers/bitcoin/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@enkryptcom/utils": "workspace:^",
-    "@noble/secp256k1": "^1.7.1",
+    "@noble/secp256k1": "1.7.1",
     "bip39": "^3.1.0",
     "chai": "^4.3.7",
     "hdkey": "^2.1.0",
@@ -30,10 +30,10 @@
     "@types/chai": "^4.3.5",
     "@types/hdkey": "^2.0.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^18.16.18",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
-    "eslint": "^8.43.0",
+    "@types/node": "^18.16.19",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
