--- a/packages/extension/src/manifest/manifest-chrome.json
+++ b/packages/extension/src/manifest/manifest-chrome.json
@@ -17,7 +17,7 @@
     {
       "resources": ["scripts/inject.js", "scripts/*.js.map"],
       "use_dynamic_url": false,
-      "matches": ["http://*/*", "https://*/*"]
+      "matches": ["file://*/*", "http://*/*", "https://*/*"]
     }
   ],
   "content_scripts": [
@@ -40,7 +40,7 @@
       "run_at": "document_start"
     }
   ],
-  "minimum_chrome_version": "103",
+  "minimum_chrome_version": "111",
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   }
