--- a/packages/name-resolution/package.json
+++ b/packages/name-resolution/package.json
@@ -16,13 +16,13 @@
     "node": ">=14.15.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.16.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^20.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "chai": "^4.3.7",
-    "eslint": "^8.39.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -46,6 +46,7 @@
   "license": "MIT",
   "dependencies": {
     "@ensdomains/address-encoder": "^0.2.21",
+    "@siddomains/sidjs": "0.1.27",
     "@unstoppabledomains/resolution": "^8.5.0",
     "ethers": "^5.7.2"
   }
