--- a/packages/extension/src/manifest/manifest-safari.json
+++ b/packages/extension/src/manifest/manifest-safari.json
@@ -36,5 +36,11 @@
     "clipboardWrite",
     "scripting",
     "activeTab"
-  ]
+  ],
+  "browser_specific_settings": {
+    "safari": {
+      "strict_min_version": "16.5",
+      "strict_max_version": "16.*"
+    }
+  }
 }
