--- a/packages/signers/kadena/package.json
+++ b/packages/signers/kadena/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@enkryptcom/keyring",
-  "version": "0.0.3",
-  "description": "Key management for enkrypt extension",
+  "name": "@enkryptcom/signer-kadena",
+  "version": "0.0.1",
+  "description": "Kadena blockchain signer",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
@@ -11,50 +11,44 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
-    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts --exit"
+    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
-    "@enkryptcom/signer-bitcoin": "workspace:^",
-    "@enkryptcom/signer-ethereum": "workspace:^",
-    "@enkryptcom/signer-kadena": "workspace:^",
-    "@enkryptcom/signer-polkadot": "workspace:^",
-    "@enkryptcom/storage": "workspace:^",
-    "@enkryptcom/types": "workspace:^",
     "@enkryptcom/utils": "workspace:^",
-    "@polkadot/util": "^12.4.2",
-    "assert": "^2.0.0",
-    "bip39": "^3.1.0"
+    "cardano-crypto-kadena.js": "^6.0.1",
+    "chai": "^4.3.8"
   },
   "devDependencies": {
+    "@enkryptcom/types": "workspace:^",
     "@types/chai": "^4.3.5",
+    "@types/hdkey": "^2.0.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.5.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "chai": "^4.3.8",
     "eslint": "^8.48.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "mocha": "^10.2.0",
+    "mocha": "^9.2.2",
     "prettier": "^2.8.8",
-    "ts-mocha": "^10.0.0",
+    "ts-mocha": "^9.0.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths": "^3.14.2",
     "tsup": "^6.7.0",
     "typescript": "^4.9.5",
     "typescript-eslint": "0.0.1-alpha.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/enkryptcom/enKrypt/tree/main/packages/keyring"
+    "url": "git+https://github.com/enkryptcom/enKrypt/tree/main/packages/signers/kadena"
   },
   "keywords": [],
-  "author": "kvhnuke",
+  "author": "ae.studio",
   "license": "MIT"
 }
