--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@swc/core": "^1.3.80",
+    "@swc/core": "^1.3.84",
     "concurrently": "^7.6.0",
     "devmoji": "^2.3.0",
     "husky": "^8.0.3",
     "node-notifier": "^10.0.1",
     "nodemon": "^2.0.22",
     "ultra-runner": "^3.10.5"
+  },
+  "resolutions": {
+    "@ledgerhq/compressjs": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz"
   }
 }
