--- a/packages/signers/kadena/package.json
+++ b/packages/signers/kadena/package.json
@@ -18,8 +18,11 @@
   },
   "dependencies": {
     "@enkryptcom/utils": "workspace:^",
+    "@kadena/cryptography-utils": "^0.3.8",
+    "bip39": "^3.1.0",
     "cardano-crypto-kadena.js": "^6.0.1",
-    "chai": "^4.3.8"
+    "chai": "^4.3.8",
+    "ed25519-hd-key": "^1.3.0"
   },
   "devDependencies": {
     "@enkryptcom/types": "workspace:^",
