remove unnecessary config in tsconfig.json and remove unused function in signer on Kadena provider

--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -17,8 +17,7 @@
       "@/*": ["./src/*"],
       "@action/*": ["./src/ui/action/*"]
     },
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
-    "allowJs": true
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": ["src/**/*.ts", "src/**/*.vue", "tests/**/*.ts"],
   "exclude": ["node_modules"]
