--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
   },
   "resolutions": {
     "@ledgerhq/compressjs": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz"
+  },
+  "dependencies": {
+    "hw-app-kda": "^0.0.0"
   }
 }
