--- a/packages/signers/kadena/package.json
+++ b/packages/signers/kadena/package.json
@@ -18,10 +18,10 @@
   },
   "dependencies": {
     "@enkryptcom/utils": "workspace:^",
-    "@kadena/cryptography-utils": "^0.3.8",
+    "@polkadot/util-crypto": "^12.5.1",
     "bip39": "^3.1.0",
     "chai": "^4.3.8",
-    "ed25519-hd-key": "^1.3.0"
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@enkryptcom/types": "workspace:^",
