--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -50,14 +50,17 @@
     "@ethereumjs/tx": "^4.2.0",
     "@ledgerhq/hw-app-eth": "^6.34.5",
     "@ledgerhq/hw-transport": "^6.28.8",
+    "@ledgerhq/hw-transport-webhid": "^6.27.19",
     "@ledgerhq/hw-transport-webusb": "^6.27.19",
     "@ledgerhq/live-common": "^31.7.0",
     "@polkadot/types": "^10.9.1",
     "@polkadot/util": "^12.4.2",
     "@trezor/connect-web": "^9.1.2",
     "@zondax/ledger-substrate": "^0.41.2",
+    "blake2b": "^2.1.4",
     "ethereumjs-util": "^7.1.5",
     "hdkey": "^2.1.0",
+    "hw-app-alamgu": "^0.1.1",
     "hw-app-kda": "^0.0.0",
     "webextension-polyfill": "^0.10.0"
   }
