--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -18,7 +18,7 @@
     "watch-vue-firefox": "cross-env BROWSER='firefox' vue-cli-service build --watch --no-clean"
   },
   "dependencies": {
-    "@babel/runtime": "^7.23.2",
+    "@babel/runtime": "^7.23.5",
     "@enkryptcom/extension-bridge": "workspace:^",
     "@enkryptcom/hw-wallets": "workspace:^",
     "@enkryptcom/keyring": "workspace:^",
@@ -29,13 +29,13 @@
     "@enkryptcom/utils": "workspace:^",
     "@ethereumjs/common": "^3.2.0",
     "@ethereumjs/tx": "^4.2.0",
-    "@ledgerhq/hw-transport-webusb": "^6.27.19",
-    "@metamask/eth-sig-util": "^6.0.1",
+    "@ledgerhq/hw-transport-webusb": "^6.28.0",
+    "@metamask/eth-sig-util": "^6.0.2",
     "@rollup/plugin-replace": "^5.0.5",
     "@types/chrome": "^0.0.250",
     "@types/events": "^3.0.3",
     "@types/less": "^3.0.6",
-    "@types/lodash": "^4.14.201",
+    "@types/lodash": "^4.14.202",
     "@types/utf-8-validate": "^5.0.2",
     "@vueuse/core": "^9.13.0",
     "add": "^2.0.6",
@@ -45,7 +45,7 @@
     "bitcoinjs-message": "^2.2.0",
     "chai": "^4.3.10",
     "concurrently": "^8.2.2",
-    "core-js": "^3.33.2",
+    "core-js": "^3.34.0",
     "echarts": "^5.4.3",
     "ethereumjs-abi": "^0.6.8",
     "ethereumjs-util": "^7.1.5",
@@ -60,32 +60,33 @@
     "switch-ts": "^1.1.1",
     "url-parse": "^1.5.10",
     "uuid": "^9.0.1",
-    "vue": "^3.3.8",
-    "vue-echarts": "^6.6.1",
+    "vue": "^3.3.10",
+    "vue-echarts": "6.6.1",
     "vue-router": "4.2.5",
     "vue3-lottie": "^2.7.4",
     "vuedraggable": "^4.1.0",
     "web3-eth": "^1.10.3",
     "web3-utils": "^1.10.3",
-    "yarn": "^1.22.19",
+    "yarn": "^1.22.21",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@polkadot/api": "^10.10.1",
-    "@polkadot/extension-inject": "^0.46.5",
-    "@polkadot/keyring": "^12.5.1",
-    "@polkadot/rpc-provider": "^10.10.1",
-    "@polkadot/types": "^10.10.1",
-    "@polkadot/types-known": "^10.10.1",
-    "@polkadot/ui-shared": "^3.6.3",
-    "@polkadot/util": "^12.5.1",
-    "@polkadot/wasm-crypto": "^7.2.2",
+    "@babel/plugin-transform-class-static-block": "^7.23.4",
+    "@polkadot/api": "^10.11.1",
+    "@polkadot/extension-inject": "^0.46.6",
+    "@polkadot/keyring": "^12.6.1",
+    "@polkadot/rpc-provider": "^10.11.1",
+    "@polkadot/types": "^10.11.1",
+    "@polkadot/types-known": "^10.11.1",
+    "@polkadot/ui-shared": "^3.6.4",
+    "@polkadot/util": "^12.6.1",
+    "@polkadot/wasm-crypto": "^7.3.2",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/ethereumjs-abi": "^0.6.5",
-    "@types/mocha": "^10.0.4",
+    "@types/mocha": "^10.0.6",
     "@types/url-parse": "^1.4.11",
     "@types/uuid": "^9.0.7",
     "@types/wif": "^2.0.5",
@@ -100,7 +101,7 @@
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
-    "eslint": "^8.53.0",
+    "eslint": "^8.55.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.7.1",
@@ -115,7 +116,7 @@
     "rollup-plugin-uglify": "^6.0.4",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "systeminformation": "^5.21.15",
+    "systeminformation": "^5.21.20",
     "ts-mocha": "^10.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^4.9.5",
