--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -5,15 +5,15 @@
   "scripts": {
     "zip": "cd dist; zip -r release.zip *;",
     "prebuild": "yarn kadena:prebuild",
-    "build:chrome": "cross-env BROWSER='chrome' vue-cli-service build && yarn build:rollup",
-    "build:firefox": "cross-env BROWSER='firefox' vue-cli-service build && yarn build:rollup && node configs/get-system-info.js",
+    "build:chrome": "yarn prebuild && cross-env BROWSER='chrome' vue-cli-service build && yarn build:rollup",
+    "build:firefox": "yarn prebuild && cross-env BROWSER='firefox' vue-cli-service build && yarn build:rollup && node configs/get-system-info.js",
     "lint": "vue-cli-service lint --fix",
     "build:rollup": "cross-env minify=on rollup --config configs/rollup.config.contentscript.mjs && cross-env minify=on rollup --config configs/rollup.config.inject.mjs",
     "inspectWebpack": "vue-cli-service inspect > webpack.log",
     "kadena:prebuild": "pactjs contract-generate --contract=coin --api https://api.chainweb.com/chainweb/0.0/mainnet01/chain/1/pact",
     "test": "ts-mocha --require ./configs/testNullCompiler.js --paths -p configs/tsconfig.test.json ./**/*.mocha.ts",
-    "watch": "rimraf dist && concurrently 'npm:watch-*(!firefox)'",
-    "watch:firefox": "concurrently 'npm:watch-*(!chrome)'",
+    "watch": "yarn prebuild && rimraf dist && concurrently 'npm:watch-*(!firefox)'",
+    "watch:firefox": "yarn prebuild && concurrently 'npm:watch-*(!chrome)'",
     "watch-contentscript": "rollup --watch --config configs/rollup.config.contentscript.mjs",
     "watch-inject": "rollup --watch --config configs/rollup.config.inject.mjs",
     "watch-vue-chrome": "cross-env BROWSER='chrome' vue-cli-service build --watch --no-clean",
