--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "version:apply": "yarn version apply --all"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
     "@swc/core": "^1.4.2",
     "concurrently": "^8.2.2",
-    "devmoji": "^2.3.0",
     "husky": "^8.0.3",
     "node-notifier": "^10.0.1",
     "nodemon": "^3.1.0",
