--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -30,6 +30,7 @@
     "@enkryptcom/utils": "workspace:^",
     "@ethereumjs/common": "^4.2.0",
     "@ethereumjs/tx": "^5.2.1",
+    "@ethereumjs/util": "^9.0.2",
     "@ledgerhq/hw-transport-webusb": "^6.28.4",
     "@metamask/eth-sig-util": "^7.0.1",
     "@rollup/plugin-replace": "^5.0.5",
@@ -47,8 +48,8 @@
     "concurrently": "^8.2.2",
     "core-js": "^3.36.0",
     "echarts": "^5.5.0",
+    "ethereum-cryptography": "^2.1.3",
     "ethereumjs-abi": "^0.6.8",
-    "ethereumjs-util": "^7.1.5",
     "ethereumjs-wallet": "^1.0.2",
     "eventemitter3": "^5.0.1",
     "lodash": "^4.17.21",
