--- a/packages/signers/ethereum/package.json
+++ b/packages/signers/ethereum/package.json
@@ -18,9 +18,9 @@
   },
   "dependencies": {
     "@enkryptcom/utils": "workspace:^",
+    "@ethereumjs/util": "^9.0.2",
     "bip39": "^3.1.0",
     "chai": "^4.4.1",
-    "ethereumjs-util": "^7.1.5",
     "hdkey": "^2.1.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1"
