--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -16,19 +16,19 @@
     "node": ">=14.15.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.11",
+    "@types/chai": "^4.3.12",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "chai": "^4.4.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-module-resolver": "^1.5.0",
-    "mocha": "^10.2.0",
+    "mocha": "^10.3.0",
     "prettier": "^2.8.8",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
@@ -48,13 +48,13 @@
     "@enkryptcom/types": "workspace:^",
     "@enkryptcom/utils": "workspace:^",
     "@ethereumjs/tx": "^4.2.0",
-    "@ledgerhq/hw-app-eth": "^6.35.2",
-    "@ledgerhq/hw-transport": "^6.30.1",
-    "@ledgerhq/hw-transport-webusb": "^6.28.1",
+    "@ledgerhq/hw-app-eth": "^6.35.6",
+    "@ledgerhq/hw-transport": "^6.30.4",
+    "@ledgerhq/hw-transport-webusb": "^6.28.4",
     "@ledgerhq/live-common": "^31.8.0",
-    "@polkadot/types": "^10.11.2",
+    "@polkadot/types": "^10.12.1",
     "@polkadot/util": "^12.6.2",
-    "@trezor/connect-web": "^9.1.9",
+    "@trezor/connect-web": "9.1.12",
     "@zondax/ledger-substrate": "^0.41.3",
     "ethereumjs-util": "^7.1.5",
     "hdkey": "^2.1.0",
