devop: temp update to web-eth web3-util

--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -27,8 +27,9 @@
     "rango-sdk-basic": "^0.1.46",
     "reconnecting-websocket": "^4.4.0",
     "uuid": "^9.0.1",
-    "web3-eth": "^1.10.4",
-    "web3-utils": "^1.10.4",
+    "web3-eth": "^4.5.0",
+    "web3-eth-contract": "^4.2.0",
+    "web3-utils": "^4.2.1",
     "ws": "^8.16.0"
   },
   "devDependencies": {
