--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -30,6 +30,7 @@
     "web3-eth": "^4.5.0",
     "web3-eth-contract": "^4.2.0",
     "web3-utils": "^4.2.1",
+    "web3-validator": "^2.0.4",
     "ws": "^8.16.0"
   },
   "devDependencies": {
