devop: ff pp changes

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -21,7 +21,7 @@
     "watch-vue-firefox": "cross-env BROWSER='firefox' vue-cli-service build --watch --no-clean"
   },
   "dependencies": {
-    "@amplitude/analytics-browser": "2.5.3",
+    "@amplitude/analytics-browser": "^2.8.0",
     "@babel/runtime": "^7.24.5",
     "@enkryptcom/extension-bridge": "workspace:^",
     "@enkryptcom/hw-wallets": "workspace:^",
