--- a/packages/extension/src/manifest/manifest-firefox.json
+++ b/packages/extension/src/manifest/manifest-firefox.json
@@ -41,5 +41,6 @@
     "gecko": {
       "strict_min_version": "100.0"
     }
-  }
+  },
+  "content_security_policy": "script-src 'self' 'unsafe-eval' 'wasm-unsafe-eval'"
 }
