--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -48,6 +48,7 @@
     "bignumber.js": "^9.1.2",
     "bip39": "^3.1.0",
     "bitcoinjs-lib": "^6.1.6",
+    "bs58": "^6.0.0",
     "chai": "^4.4.1",
     "concurrently": "^8.2.2",
     "core-js": "^3.37.1",
@@ -92,6 +93,7 @@
     "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/bs58": "^4.0.4",
     "@types/ethereumjs-abi": "^0.6.5",
     "@types/mocha": "^10.0.6",
     "@types/url-parse": "^1.4.11",
