--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ultra-runner": "^3.10.5"
   },
   "resolutions": {
-    "@ledgerhq/compressjs": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz"
+    "@ledgerhq/compressjs": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz",
+    "@noble/hashes": "^1.4.0"
   }
 }
