--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -38,6 +38,8 @@
     "@ledgerhq/hw-transport-webusb": "^6.29.2",
     "@metamask/eth-sig-util": "^7.0.3",
     "@rollup/plugin-replace": "^5.0.7",
+    "@solana/spl-token": "^0.4.8",
+    "@solana/web3.js": "^1.95.2",
     "@types/chrome": "^0.0.269",
     "@types/events": "^3.0.3",
     "@types/less": "^3.0.6",
