--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -37,7 +37,11 @@
     "@kadena/client": "^1.13.0",
     "@ledgerhq/hw-transport-webusb": "^6.29.2",
     "@metamask/eth-sig-util": "^7.0.3",
+    "@metaplex-foundation/mpl-bubblegum": "^4.2.0",
+    "@metaplex-foundation/umi": "^0.9.2",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@rollup/plugin-replace": "^5.0.7",
+    "@solana-developers/helpers": "^2.4.0",
     "@solana/spl-token": "^0.4.8",
     "@solana/web3.js": "^1.95.2",
     "@types/chrome": "^0.0.269",
