devop: solana wallet-standard connection

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -43,6 +43,7 @@
     "@rollup/plugin-replace": "^5.0.7",
     "@solana-developers/helpers": "^2.4.0",
     "@solana/spl-token": "^0.4.8",
+    "@solana/wallet-standard-features": "^1.2.0",
     "@solana/web3.js": "^1.95.2",
     "@types/chrome": "^0.0.269",
     "@types/events": "^3.0.3",
@@ -50,6 +51,7 @@
     "@types/lodash": "^4.17.7",
     "@types/utf-8-validate": "^5.0.2",
     "@vueuse/core": "^10.11.0",
+    "@wallet-standard/base": "^0.0.0-20240703212708",
     "add": "^2.0.6",
     "bignumber.js": "^9.1.2",
     "bip39": "^3.1.0",
@@ -97,6 +99,7 @@
     "@polkadot/wasm-crypto": "^7.3.2",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-inject": "^5.0.5",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/bs58": "^4.0.4",
