--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -50,6 +50,7 @@
     "@ethereumjs/rlp": "^5.0.2",
     "@ethereumjs/tx": "^5.3.0",
     "@ethereumjs/util": "^9.0.3",
+    "@ledgerhq/hw-app-btc": "^10.4.1",
     "@ledgerhq/hw-app-eth": "^6.37.3",
     "@ledgerhq/hw-transport": "^6.31.2",
     "@ledgerhq/hw-transport-webusb": "^6.29.2",
@@ -58,6 +59,7 @@
     "@polkadot/util": "^13.0.2",
     "@trezor/connect-web": "^9.3.0",
     "@zondax/ledger-substrate": "^0.44.7",
+    "bitcoinjs-lib": "^6.1.6",
     "hdkey": "^2.1.0",
     "webextension-polyfill": "^0.12.0"
   }
