--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@enkryptcom/types": "workspace:^",
     "@enkryptcom/utils": "workspace:^",
+    "@solana/web3.js": "^1.95.2",
     "bignumber.js": "^9.1.2",
     "eventemitter3": "^5.0.1",
     "isomorphic-ws": "^5.0.0",
