--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "resolutions": {
     "@ledgerhq/compressjs": "https://registry.yarnpkg.com/@favware/skip-dependency/-/skip-dependency-1.2.1.tgz",
-    "@noble/hashes": "^1.4.0"
+    "@noble/hashes": "^1.4.0",
+    "fork-ts-checker-webpack-plugin": "^6.5.3"
   }
 }
