--- a/packages/swap/package.json
+++ b/packages/swap/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --clean",
     "lint": "prettier --write .",
-    "test": "ts-mocha -p tsconfig.json tests/**/*.test.ts"
+    "test": "ts-mocha -p tsconfig.json tests/**/paraswap*.test.ts"
   },
   "engines": {
     "node": ">=14.15.0"
