devop: partial changes

--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -61,7 +61,9 @@
     "@trezor/connect-web": "^9.4.0",
     "@zondax/ledger-substrate": "^1.0.0",
     "bitcoinjs-lib": "^6.1.6",
+    "bs58": "^6.0.0",
     "hdkey": "^2.1.0",
+    "ledger-bitcoin": "^0.2.3",
     "webextension-polyfill": "^0.12.0"
   }
 }
