--- a/packages/hw-wallets/package.json
+++ b/packages/hw-wallets/package.json
@@ -57,8 +57,8 @@
     "@ledgerhq/live-common": "^34.1.0",
     "@polkadot/types": "^12.4.2",
     "@polkadot/util": "^13.0.2",
-    "@trezor/connect": "^9.4.0",
-    "@trezor/connect-web": "^9.4.0",
+    "@trezor/connect": "^9.4.1",
+    "@trezor/connect-webextension": "^9.4.1",
     "@zondax/ledger-substrate": "^1.0.0",
     "bitcoinjs-lib": "^6.1.6",
     "bs58": "^6.0.0",
