--- a/packages/extension-vite/package.json
+++ b/packages/extension-vite/package.json
@@ -105,6 +105,7 @@
     "@types/chrome": "^0.0.273",
     "@types/ethereumjs-abi": "^0.6.5",
     "@types/events": "^3.0.3",
+    "@types/fs-extra": "^11.0.4",
     "@types/less": "^3.0.6",
     "@types/lodash": "^4.17.9",
     "@types/mocha": "^10.0.8",
@@ -121,6 +122,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.28.0",
+    "fs-extra": "^11.2.0",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "mocha": "^10.7.3",
