--- a/packages/extension-vite/package.json
+++ b/packages/extension-vite/package.json
@@ -23,12 +23,12 @@
     "watch": "yarn prebuild && rimraf dist && concurrently 'npm:watch-*(!firefox)'",
     "watch:firefox": "yarn prebuild && concurrently 'npm:watch-*(!chrome)'",
     "watch-contentscript": "rollup --watch --config configs/rollup.config.contentscript.mjs",
-    "watch-inject": "rollup --watch --config configs/rollup.config.inject.mjs",
+    "watch-inject": "rollup --watch --config configs/rollup.config.inject.ts",
     "watch-vue-chrome": "cross-env BROWSER='chrome' vue-cli-service build --watch --no-clean",
     "watch-vue-firefox": "cross-env BROWSER='firefox' vue-cli-service build --watch --no-clean"
   },
   "dependencies": {
-    "@crxjs/vite-plugin": "^1.0.14",
+    "@crxjs/vite-plugin": "^2.0.0-beta.25",
     "@enkryptcom/extension-bridge": "workspace:^",
     "@enkryptcom/hw-wallets": "workspace:^",
     "@enkryptcom/keyring": "workspace:^",
@@ -99,7 +99,8 @@
     "@rollup/plugin-inject": "^5.0.5",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.1",
     "@tsconfig/node20": "^20.1.4",
     "@types/bs58": "^4.0.4",
     "@types/chrome": "^0.0.273",
