--- a/packages/extension-vite/tsconfig.app.json
+++ b/packages/extension-vite/tsconfig.app.json
@@ -7,7 +7,7 @@
     "package.json",
     "vite.config.ts",
     "manifest.config.ts",
-    "configs/vite/*.ts"
+    "configs/**/*.ts"
   ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
