--- a/packages/extension-vite/tsconfig.app.json
+++ b/packages/extension-vite/tsconfig.app.json
@@ -15,6 +15,7 @@
     "verbatimModuleSyntax": false,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "baseUrl": ".",
+    "types": [".kadena/pactjs-generated"],
     "paths": {
       "@/*": ["./src/*"],
       "@action/*": ["./src/ui/action/*"]
