devop: fix assets list class, and linter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,10 @@
       "changeProcessCWD": true
     }
   ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll": "explicit"
+  },
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "cSpell.words": ["enkrypt", "enkryptcom", "polkadot", "webextension"]
 }
