--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "yarn workspaces foreach run lint",
     "build:all": "ultra -r build",
     "watch": "concurrently 'npm:watch-*'",
-    "watch-extension": "cd packages/extension && npm run watch",
+    "watch-extension": "cd packages/extension && yarn watch",
     "watch-ts": "nodemon --exec 'yarn run build:all && node scripts/compile-done.js'",
     "upgrade": "yarn upgrade-interactive",
     "version:bump:patch": "yarn workspaces foreach -pv --exclude @enkryptcom/extension exec 'yarn version --immediate patch'",
