--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -55,8 +55,8 @@ jobs:
           message: |
             Virus total analysis
             chrome: 
-            ${VIRUS_TOTAL_URL_CHROME}
+            ${{env.VIRUS_TOTAL_URL_CHROME}}
             firefox:
-            ${VIRUS_TOTAL_URL_FIREFOX}
+            ${{env.VIRUS_TOTAL_URL_FIREFOX}}
           comment-tag: pr_build_message
           mode: recreate
