devop: add artifacts

--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -35,6 +35,7 @@ jobs:
           VIRUS_TOTAL_API_KEY: ${{secrets.VIRUS_TOTAL_API_KEY}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
+          mkdir release
           docker run --rm -v `pwd`:/home:rw --user "$(id -u):$(id -g)" enkrypt-build-container /bin/bash -c "yarn build:all"
           docker run --rm -v `pwd`:/home:rw --user "$(id -u):$(id -g)" enkrypt-build-container /bin/bash -c "cd packages/extension && yarn build:chrome && yarn zip"
           FILE_SHA256=`sha256sum  ./packages/extension/dist/release.zip | awk '{print $1}'`
@@ -42,23 +43,40 @@ jobs:
           UPLOAD_URL=`curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY" | jq --raw-output '.data'`
           curl --request POST --url "$UPLOAD_URL" --header "x-apikey: $VIRUS_TOTAL_API_KEY" --header 'Accept: application/json' --header 'Content-Type: multipart/form-data' -F "file=@./packages/extension/dist/release.zip"
           VIRUS_TOTAL_URL_CHROME=https://www.virustotal.com/gui/file/$FILE_SHA256
+          mv ./packages/extension/dist/release.zip ./release/enkrypt-chrome.zip
           docker run --rm -v `pwd`:/home:rw --user "$(id -u):$(id -g)" enkrypt-build-container /bin/bash -c "cd packages/extension && yarn build:firefox && yarn zip"
           FILE_SHA256=`sha256sum  ./packages/extension/dist/release.zip | awk '{print $1}'`
           curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY"
           UPLOAD_URL=`curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY" | jq --raw-output '.data'`
           curl --request POST --url "$UPLOAD_URL" --header "x-apikey: $VIRUS_TOTAL_API_KEY" --header 'Accept: application/json' --header 'Content-Type: multipart/form-data' -F "file=@./packages/extension/dist/release.zip"
           VIRUS_TOTAL_URL_FIREFOX=https://www.virustotal.com/gui/file/$FILE_SHA256
+          mv ./packages/extension/dist/release.zip ./release/enkrypt-firefox.zip
           echo "VIRUS_TOTAL_URL_CHROME=$VIRUS_TOTAL_URL_CHROME" >> $GITHUB_ENV
           echo "VIRUS_TOTAL_URL_FIREFOX=$VIRUS_TOTAL_URL_FIREFOX" >> $GITHUB_ENV
+          echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+
+      - uses: actions/upload-artifact@v4
+        id: artifact-upload-chrome
+        with:
+          name: enkrypt-chrome-${{ env.SHORT_SHA }}.zip
+          path: ./release/enkrypt-chrome.zip
+
+      - uses: actions/upload-artifact@v4
+        id: artifact-upload-firefox
+        with:
+          name: enkrypt-firefox-${{ env.SHORT_SHA }}.zip
+          path: ./release/enkrypt-firefox.zip
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v3
         with:
           message: |
+            Build Files
+            chrome: ${{ steps.artifact-upload-chrome.outputs.artifact-url }}
+            firefox: ${{ steps.artifact-upload-firefox.outputs.artifact-url }}
+
             Virus total analysis
-            chrome: 
-            ${{ env.VIRUS_TOTAL_URL_CHROME }}
-            firefox:
-            ${{ env.VIRUS_TOTAL_URL_FIREFOX }}
+            chrome: ${{ env.VIRUS_TOTAL_URL_CHROME }}
+            firefox: ${{ env.VIRUS_TOTAL_URL_FIREFOX }}
           comment-tag: pr_build_message
           mode: recreate
