--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -35,22 +35,25 @@ jobs:
           VIRUS_TOTAL_API_KEY: ${{secrets.VIRUS_TOTAL_API_KEY}}
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
-          mkdir release
+          mkdir release-chrome
+          mkdir release-firefox
           docker run --rm -v `pwd`:/home:rw --user "$(id -u):$(id -g)" enkrypt-build-container /bin/bash -c "yarn build:all"
           docker run --rm -v `pwd`:/home:rw --user "$(id -u):$(id -g)" enkrypt-build-container /bin/bash -c "cd packages/extension && yarn build:chrome && yarn zip"
+          cp -r packages/extension/dist/* release-chrome
+          rm release-chrome/release.zip
           FILE_SHA256=`sha256sum  ./packages/extension/dist/release.zip | awk '{print $1}'`
           curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY"
           UPLOAD_URL=`curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY" | jq --raw-output '.data'`
           curl --request POST --url "$UPLOAD_URL" --header "x-apikey: $VIRUS_TOTAL_API_KEY" --header 'Accept: application/json' --header 'Content-Type: multipart/form-data' -F "file=@./packages/extension/dist/release.zip"
           VIRUS_TOTAL_URL_CHROME=https://www.virustotal.com/gui/file/$FILE_SHA256
-          mv ./packages/extension/dist/release.zip ./release/enkrypt-chrome.zip
           docker run --rm -v `pwd`:/home:rw --user "$(id -u):$(id -g)" enkrypt-build-container /bin/bash -c "cd packages/extension && yarn build:firefox && yarn zip"
+          cp -r packages/extension/dist/* release-firefox
+          rm release-firefox/release.zip
           FILE_SHA256=`sha256sum  ./packages/extension/dist/release.zip | awk '{print $1}'`
           curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY"
           UPLOAD_URL=`curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY" | jq --raw-output '.data'`
           curl --request POST --url "$UPLOAD_URL" --header "x-apikey: $VIRUS_TOTAL_API_KEY" --header 'Accept: application/json' --header 'Content-Type: multipart/form-data' -F "file=@./packages/extension/dist/release.zip"
           VIRUS_TOTAL_URL_FIREFOX=https://www.virustotal.com/gui/file/$FILE_SHA256
-          mv ./packages/extension/dist/release.zip ./release/enkrypt-firefox.zip
           echo "VIRUS_TOTAL_URL_CHROME=$VIRUS_TOTAL_URL_CHROME" >> $GITHUB_ENV
           echo "VIRUS_TOTAL_URL_FIREFOX=$VIRUS_TOTAL_URL_FIREFOX" >> $GITHUB_ENV
           echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
@@ -58,15 +61,15 @@ jobs:
       - uses: actions/upload-artifact@v4
         id: artifact-upload-chrome
         with:
-          name: enkrypt-chrome-${{ env.SHORT_SHA }}
-          path: ./release/enkrypt-chrome.zip
+          name: enkrypt-chrome-${{ env.SHORT_SHA }}.zip
+          path: ./release-chrome
           retention-days: 3
 
       - uses: actions/upload-artifact@v4
         id: artifact-upload-firefox
         with:
-          name: enkrypt-firefox-${{ env.SHORT_SHA }}
-          path: ./release/enkrypt-firefox.zip
+          name: enkrypt-firefox-${{ env.SHORT_SHA }}.xpi
+          path: ./release-firefox
           retention-days: 3
 
       - name: Comment PR
@@ -74,11 +77,11 @@ jobs:
         with:
           message: |
             :briefcase: Build Files
-            chrome: [enkrypt-chrome-${{ env.SHORT_SHA }}.zip](${{ steps.artifact-upload-chrome.outputs.artifact-url }})
-            firefox: [enkrypt-firefox-${{ env.SHORT_SHA }}.zip](${{ steps.artifact-upload-firefox.outputs.artifact-url }})
+            chrome:   [enkrypt-chrome-${{ env.SHORT_SHA }}.zip](${{ steps.artifact-upload-chrome.outputs.artifact-url }})
+            firefox:  [enkrypt-firefox-${{ env.SHORT_SHA }}.zip](${{ steps.artifact-upload-firefox.outputs.artifact-url }})
 
             :syringe: Virus total analysis
-            chrome: [${{ env.SHORT_SHA }}](${{ env.VIRUS_TOTAL_URL_CHROME }})
-            firefox: [${{ env.SHORT_SHA }}](${{ env.VIRUS_TOTAL_URL_FIREFOX }})
+            chrome:   [${{ env.SHORT_SHA }}](${{ env.VIRUS_TOTAL_URL_CHROME }})
+            firefox:  [${{ env.SHORT_SHA }}](${{ env.VIRUS_TOTAL_URL_FIREFOX }})
           comment-tag: pr_build_message
           mode: recreate
